<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="java.util.List"/>

        <variable
            name="sortItemName"
            type="List&lt;String>" />

        <variable
            name="sortInfo"
            type="kr.yangbob.memorization.SortInfo" />

        <variable
            name="sortDialog"
            type="kr.yangbob.memorization.view.SortDialog" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_calendar_background"
        android:padding="16dp">

        <TextView
            android:id="@+id/dialogTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_by"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/sortItemGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dialogTitle">

            <RadioButton
                android:id="@+id/sortItem1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="@{sortInfo.sortedItemIdx == 0 ? true : false}"
                android:text="@{sortItemName[0]}"
                android:theme="@style/RadioButtonStyle" />

            <RadioButton
                android:id="@+id/sortItem2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:checked="@{sortInfo.sortedItemIdx == 1 ? true : false}"
                android:text="@{sortItemName[1]}"
                android:theme="@style/RadioButtonStyle" />

            <RadioButton
                android:id="@+id/sortItem3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="@{sortInfo.sortedItemIdx == 2 ? true : false}"
                android:text="@{sortItemName[2]}"
                android:theme="@style/RadioButtonStyle" />
        </RadioGroup>

        <TextView
            android:id="@+id/dialogSubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/order"
            android:textColor="@color/boldDarkGray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sortItemGroup" />

        <ImageView
            android:id="@+id/dottedLine"
            android:layout_width="0dp"
            android:layout_height="3dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/dotted_line_horizontal"
            android:gravity="center"
            android:layerType="software"
            app:layout_constraintBottom_toBottomOf="@id/dialogSubTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/dialogSubTitle"
            app:layout_constraintTop_toTopOf="@id/dialogSubTitle" />

        <RadioGroup
            android:id="@+id/sortOrderGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dialogSubTitle">

            <RadioButton
                android:id="@+id/sortAscending"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="@{sortInfo.isAscending ? true : false}"
                android:text="@string/ascending"
                android:theme="@style/RadioButtonStyle" />

            <RadioButton
                android:id="@+id/sortDescending"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:checked="@{sortInfo.isAscending ? false : true}"
                android:text="@string/descending"
                android:theme="@style/RadioButtonStyle" />
        </RadioGroup>

        <TextView
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:onClick="@{() -> sortDialog.cancelDialog()}"
            android:text="@string/cancel"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnDone"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/btnDone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:onClick="@{() -> sortDialog.doneDialog()}"
            android:text="@string/done"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnCancel"
            app:layout_constraintTop_toBottomOf="@id/sortOrderGroup" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

